--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -95,7 +95,9 @@ if(ENABLE_NLS OR CONFIG_I18N)
     INCLUDE(FindIntl)
     if(Intl_FOUND)
         LIST(APPEND nls_LIBS ${Intl_LIBRARIES})
-        LIST(APPEND nls_CFLAGS -I${Intl_INCLUDE_DIRS})
+        if(${Intl_INCLUDE_DIRS})
+            LIST(APPEND nls_CFLAGS -I${Intl_INCLUDE_DIRS})
+        endif()
     endif()
 endif()
 
