Move SVG loader in a dedicated source file.  Only support SVG for icons, not for icewmbg backgrounds. Let icewmbg pixmaps free its associated Image to reduce memory usage.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -405,7 +405,7 @@ set(icewm_pc_flags ${CXXFLAGS_COMMON} ${fontconfig_CFLAGS} ${xft_CFLAGS}
 
 SET(ICE_COMMON_SRCS udir.cc upath.cc yapp.cc yxapp.cc ytimer.cc yprefs.cc
                     ywindow.cc ypaint.cc ypopup.cc ycursor.cc ysocket.cc
-                    ypipereader.cc yxembed.cc yconfig.cc yfont.cc
+                    ypipereader.cc yxembed.cc yconfig.cc yfont.cc ysvg.cc
                     ypixmap.cc yimage2.cc yimage_gdk.cc yximage.cc ycolor.cc
                     ytooltip.cc ylocale.cc yarray.cc yfileio.cc ytime.cc
                     mstring.cc ref.cc logevent.cc misc.cc)
