--- a/doc/Makefile.am
+++ b/doc/Makefile.am
@@ -11,7 +11,9 @@ html_documentation = \
 
 $(html_documentation): %.html: %.md %.adoc
 	$(AM_V_GEN)if test -x "`which $(MARKDOWN) 2>/dev/null`"; then \
+		ls -l icewm.*; \
 		$(MARKDOWN) $*.md >$@; else \
+		ls -l icewm.*; \
 		$(ASCIIDOC) $(ASCIIDOC_BACKEND) -o $@ $*.adoc; fi
 
 maintainer-clean-local:
