--- a/doc/Makefile.am
+++ b/doc/Makefile.am
@@ -10,11 +10,11 @@ html_documentation = \
 	icewm.html
 
 $(html_documentation): %.html: %.md %.adoc
-	$(AM_V_GEN)if test -x "`which $(MARKDOWN) 2>/dev/null`"; then \
-		ls -l icewm.*; \
-		$(MARKDOWN) $*.md >$@; else \
-		ls -l icewm.*; \
-		$(ASCIIDOC) $(ASCIIDOC_BACKEND) -o $@ $*.adoc; fi
+	if test -x "`which $(MARKDOWN) 2>/dev/null`"; then \
+		ls -l $(srcdir)/icewm.* icewm.*; \
+		$(MARKDOWN) $(srcdir)/$*.md >$@; else \
+		ls -l $(srcdir)/icewm.* icewm.*; \
+		$(ASCIIDOC) $(ASCIIDOC_BACKEND) -o $@ $(srcdir)/$*.adoc; fi
 
 maintainer-clean-local:
 	-rm -f -- $(html_documentation)
