Cleanup test and prefer markdown manual.

--- a/doc/Makefile.am
+++ b/doc/Makefile.am
@@ -1,7 +1,7 @@
 
 EXTRA_DIST = \
 	$(html_documentation) \
-	icewm.adoc
+	icewm.md
 
 doc_DATA = \
 	$(html_documentation)
@@ -10,10 +10,8 @@ html_documentation = \
 	icewm.html
 
 $(html_documentation): %.html: %.md %.adoc
-	if test -x "`which $(MARKDOWN) 2>/dev/null`"; then \
-		ls -l $(srcdir)/icewm.* icewm.*; \
+	$(AM_V_GEN)if test -x "`which $(MARKDOWN) 2>/dev/null`"; then \
 		$(MARKDOWN) $(srcdir)/$*.md >$@; else \
-		ls -l $(srcdir)/icewm.* icewm.*; \
 		$(ASCIIDOC) $(ASCIIDOC_BACKEND) -o $@ $(srcdir)/$*.adoc; fi
 
 maintainer-clean-local:
