--- a/configure.ac
+++ b/configure.ac
@@ -2,10 +2,10 @@
 # Process this file with autoconf to produce a configure script.
 
 AC_PREREQ([2.69])
-AC_INIT([icewm],[3.2.3],
+AC_INIT([icewm],[3.3.0],
         [https://github.com/bbidulock/icewm/issues],
         [icewm],[https://ice-wm.org])
-AC_REVISION([3.2.3])
+AC_REVISION([3.3.0])
 
 # set better defaults
 AC_PREFIX_DEFAULT([/usr])
@@ -22,10 +22,10 @@ AC_CONFIG_AUX_DIR([scripts])
 AC_USE_SYSTEM_EXTENSIONS
 AC_CANONICAL_TARGET
 
-DATE='2022-12-05'
+DATE='2022-12-20'
 AC_SUBST([DATE])
 
-MDOCDATE='December 05, 2022'
+MDOCDATE='December 20, 2022'
 AC_SUBST([MDOCDATE])
 
 BRANCH='icewm-1-4-BRANCH'
@@ -351,32 +351,22 @@ AC_ARG_ENABLE([imlib2],
     AS_HELP_STRING([--disable-imlib2],[Disable imlib2 rendering.
         @<:@default=enabled@:>@]))
 AC_ARG_ENABLE([nanosvg],
-    AS_HELP_STRING([--enable-nanosvg],[Enable imlib2 SVG using nanosvg.]))
+    AS_HELP_STRING([--enable-nanosvg],[Enable SVG using nanosvg.]))
 AC_ARG_ENABLE([gdk-pixbuf],
     AS_HELP_STRING([--enable-gdk-pixbuf],[Enable gdk-pixbuf rendering.
 	@<:@default=disabled@:>@]))
+
+image_library=
 if test "x$enable_gdk_pixbuf" = xyes
 then
     PKG_CHECK_MODULES([PIXBUF],[gdk-pixbuf-xlib-2.0],[
 	IMAGE_CFLAGS="$PIXBUF_CFLAGS"
 	IMAGE_LIBS="$PIXBUF_LIBS"
-	AC_DEFINE([CONFIG_GDK_PIXBUF_XLIB],[1],[Define to enable gdk-pixbuf rendering.])
-	image_library=gdk-pixbuf-xlib-2.0])
-    if test x$enable_rsvg != xno; then
-        PKG_CHECK_MODULES([LIBRSVG],[librsvg-2.0],[
-            IMAGE_CFLAGS="$LIBRSVG_CFLAGS $IMAGE_CFLAGS"
-            IMAG_LIBS="$LIBRSVG_LIBS $IMAGE_LIBS"
-            AC_DEFINE([CONFIG_LIBRSVG],[1],[Define to enable librsvg rendering.])
-            image_library="$image_library librsvg-2.0"],
-            [AC_MSG_WARN([Package librsvg is missing. SVG is not supported.])])
-    fi
-    PKG_CHECK_MODULES([XPM],[xpm],[
-	IMAGE_CFLAGS="$IMAGE_CFLAGS $XPM_CFLAGS"
-	IMAGE_LIBS="$IMAGE_LIBS $XPM_LIBS"
-	AC_DEFINE([CONFIG_XPM],[1],[Define to enable libxpm rendering.])
-	image_library="$image_library libxpm"],
-	[AC_MSG_ERROR([Package libXpm is required for themable cursors.])])
+	AC_DEFINE([CONFIG_GDK_PIXBUF_XLIB],[1],
+                  [Define to enable gdk-pixbuf rendering.])
+	image_library="gdk-pixbuf-xlib-2.0"])
 fi
+
 if test "x$enable_gdk_pixbuf" != xyes &&
    test "x$enable_imlib2" != xno
 then
@@ -384,23 +374,13 @@ then
 	IMAGE_CFLAGS="$IMLIB2_CFLAGS"
 	IMAGE_LIBS="$IMLIB2_LIBS"
 	AC_DEFINE([CONFIG_IMLIB2],[1],[Define to enable imlib2 rendering.])
-	image_library=imlib2])
-    PKG_CHECK_MODULES([XPM],[xpm],[
-	IMAGE_CFLAGS="$IMAGE_CFLAGS $XPM_CFLAGS"
-	IMAGE_LIBS="$IMAGE_LIBS $XPM_LIBS"
-	AC_DEFINE([CONFIG_XPM],[1],[Define to enable libxpm rendering.])
-	image_library="$image_library libxpm"],
-	[AC_MSG_ERROR([Package libXpm is required for themable cursors.])])
-    if test x$enable_rsvg != xno; then
-        PKG_CHECK_MODULES([LIBRSVG],[librsvg-2.0],[
-            IMAGE_CFLAGS="$IMAGE_CFLAGS $LIBRSVG_CFLAGS"
-            IMAGE_LIBS="$IMAGE_LIBS $LIBRSVG_LIBS"
-            AC_DEFINE([CONFIG_LIBRSVG],[1],[Define to enable librsvg rendering.])
-            image_library="$image_library librsvg-2.0"],
-            [AC_MSG_WARN([Package librsvg is missing. SVG is not supported.])])
-    fi
-    if test "x$enable_rsvg" = xno &&
-       test "x$enable_nanosvg" = xyes
+	image_library="imlib2"])
+fi
+
+if test "x$image_library" = "xgdk-pixbuf-xlib-2.0" ||
+   test "x$image_library" = "ximlib2"
+then
+    if test "x$enable_nanosvg" = xyes
     then
         if ! test -f src/nanosvg.h ||
            ! test -s src/nanosvg.h ||
@@ -411,10 +391,10 @@ then
             if command -v wget >/dev/null
             then
                 AC_MSG_NOTICE([downloading nanosvg using wget])
-                if ! wget -q --timeout=3 -e robots=off -P src \
-                    $hub/nanosvg.h $hub/nanosvgrast.h
+                if ! wget -q --timeout=3 -e robots=off -e noclobber=off \
+                    -P src $hub/nanosvg.h $hub/nanosvgrast.h
                 then
-                    AC_MSG_WARN([download of nanosvg failed])
+                    AC_MSG_WARN([Download of nanosvg failed.])
                 fi
             fi
         fi
@@ -428,7 +408,26 @@ then
             AC_MSG_WARN([Nanosvg includes are missing. SVG is not supported.])
         fi
     fi
+
+    if test "x$enable_nanosvg" != xyes &&
+       test "x$enable_rsvg" != xno
+    then
+        PKG_CHECK_MODULES([LIBRSVG],[librsvg-2.0],[
+            IMAGE_CFLAGS="$LIBRSVG_CFLAGS $IMAGE_CFLAGS"
+            IMAGE_LIBS="$LIBRSVG_LIBS $IMAGE_LIBS"
+            AC_DEFINE([CONFIG_LIBRSVG],[1],[Define to enable librsvg rendering.])
+            image_library="$image_library librsvg-2.0"],
+            [AC_MSG_WARN([Package librsvg is missing. SVG is not supported.])])
+    fi
+
+    PKG_CHECK_MODULES([XPM],[xpm],[
+	IMAGE_CFLAGS="$IMAGE_CFLAGS $XPM_CFLAGS"
+	IMAGE_LIBS="$IMAGE_LIBS $XPM_LIBS"
+	AC_DEFINE([CONFIG_XPM],[1],[Define to enable libxpm rendering.])
+	image_library="$image_library libxpm"],
+	[AC_MSG_ERROR([Package libXpm is required for themable cursors.])])
 fi
+
 if test "x$enable_gdk_pixbuf" != xyes &&
    test "x$enable_imlib2" = xno
 then
