--- a/lib/icewm.desktop
+++ b/lib/icewm.desktop
@@ -4,6 +4,7 @@ Type=XSession
 Name=IceWM
 GenericName=Window Manager
 GenericName[da]=Vindueshåndtering
+GenericName[sv]=Fönsterhanterare
 GenericName[es]=Administrador de ventanas
 GenericName[fr]=Gestionnaire de Fenêtres
 GenericName[id]=Pengelola Jendela
@@ -13,6 +14,7 @@ GenericName[pt_BR]=Gerenciador de Janelas
 GenericName[uk]=Менеджер вікон IceWM
 Comment=Simple and fast window manager
 Comment[da]=Simpel og hurtig vindueshåndtering
+Comment[sv]=Simpel och snabb fönsterhanterare
 Comment[es]=Administrador de ventanas simple y rápido
 Comment[id]=Pengelola jendela sederhana dan cepat
 Comment[lt]=Paprasta ir greita langų tvarkytuvė
