--- a/lib/icewm.desktop
+++ b/lib/icewm.desktop
@@ -12,6 +12,7 @@ GenericName[lt]=Langų tvarkytuvė
 GenericName[pt]=Gestor de Janelas
 GenericName[pt_BR]=Gerenciador de Janelas
 GenericName[uk]=Менеджер вікон IceWM
+GenericName[tr]=Pencere Yöneticisi
 Comment=Simple and fast window manager
 Comment[da]=Simpel og hurtig vindueshåndtering
 Comment[sv]=Simpel och snabb fönsterhanterare
@@ -21,6 +22,7 @@ Comment[lt]=Paprasta ir greita langų tvarkytuvė
 Comment[pt]=Gestor de janelas simples e rápido
 Comment[pt_BR]=Gerenciador simples e rápido de janelas
 Comment[uk]=Простий та швидкий менеджер вікон
+Comment[tr]=Basit ve hızlı bir pencere yöneticisi
 Icon=icewm
 TryExec=/usr/bin/icewm
 Exec=/usr/bin/icewm
