--- a/lib/icewm-session.desktop
+++ b/lib/icewm-session.desktop
@@ -12,6 +12,7 @@ Name[pt]=Sessão IceWM
 Name[pt_BR]=Sessão do IceWM
 Name[ru]=Сеанс IceWM
 Name[uk]=Сеанс IceWM
+Name[tr]=IceWM oturumu
 GenericName=Window Manager
 GenericName[da]=Vindueshåndtering
 GenericName[sv]=Fönsterhanterare
@@ -24,6 +25,7 @@ GenericName[pt]=Gestor de Janelas
 GenericName[pt_BR]=Gerenciador de Janelas
 GenericName[ru]=Менеджер окон IceWM
 GenericName[uk]=Менеджер вікон IceWM
+GenericName[tr]=IceWM pencere yöneticisi
 Comment=This session logs you into IceWM
 Comment[az]=Bu iclas sizi IceWM'a daxil edəcək
 Comment[be]=Гэтая сэсыя завядзе вас у IceWM
