Turkish translation of .desktop files and closes #716.

--- a/lib/icewm-session.desktop
+++ b/lib/icewm-session.desktop
@@ -11,6 +11,7 @@ Name[lt]=IceWM seansas
 Name[pt]=Sessão IceWM
 Name[pt_BR]=Sessão do IceWM
 Name[ru]=Сеанс IceWM
+Name[tr]=IceWM oturumu
 Name[uk]=Сеанс IceWM
 GenericName=Window Manager
 GenericName[da]=Vindueshåndtering
@@ -23,6 +24,7 @@ GenericName[lt]=Langų tvarkytuvė
 GenericName[pt]=Gestor de Janelas
 GenericName[pt_BR]=Gerenciador de Janelas
 GenericName[ru]=Менеджер окон IceWM
+GenericName[tr]=IceWM pencere yöneticisi
 GenericName[uk]=Менеджер вікон IceWM
 Comment=This session logs you into IceWM
 Comment[az]=Bu iclas sizi IceWM'a daxil edəcək
