--- a/lib/icewm.desktop
+++ b/lib/icewm.desktop
@@ -11,6 +11,7 @@ GenericName[id]=Pengelola Jendela
 GenericName[lt]=Langų tvarkytuvė
 GenericName[pt]=Gestor de Janelas
 GenericName[pt_BR]=Gerenciador de Janelas
+GenericName[tr]=Pencere Yöneticisi
 GenericName[uk]=Менеджер вікон IceWM
 Comment=Simple and fast window manager
 Comment[da]=Simpel og hurtig vindueshåndtering
@@ -20,6 +21,7 @@ Comment[id]=Pengelola jendela sederhana dan cepat
 Comment[lt]=Paprasta ir greita langų tvarkytuvė
 Comment[pt]=Gestor de janelas simples e rápido
 Comment[pt_BR]=Gerenciador simples e rápido de janelas
+Comment[tr]=Basit ve hızlı bir pencere yöneticisi
 Comment[uk]=Простий та швидкий менеджер вікон
 Icon=icewm
 TryExec=/usr/bin/icewm
