Let configure on OpenBSD test for -liconv in EXTRA_LIBS.

--- a/configure.ac
+++ b/configure.ac
@@ -115,6 +115,9 @@ case "${target_os}" in
         AC_CHECK_LIB(socket, socketpair)
         AC_CHECK_LIB(nsl, gethostbyname)
         ;;
+    *openbsd*)
+        test x$enable_i18n = xyes -a -z "$EXTRA_LIBS" && EXTRA_LIBS=-liconv
+        ;;
     *)
         :
         ;;
