Minor heap usage optimization
Split the Categories when it's time and not before, use a different
splitter which also reduced the code size by a few KB.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -491,6 +491,7 @@ IF(CONFIG_FDO_MENUS)
     #target_compile_options(${_tgt} PUBLIC -flto)
     #target_link_options(${_tgt} PUBLIC -flto)
     #target_compile_options(${_tgt} PUBLIC -static)
+    #target_compile_options(${_tgt} PUBLIC -Os)
     #target_link_options(${_tgt} PUBLIC -static)
     INSTALL(TARGETS ${_tgt} DESTINATION ${BINDIR})
 ENDIF()
