Use system installation of nanosvg package, where possible

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -4,14 +4,11 @@ cmake_minimum_required(VERSION 3.13)
 
 PROJECT(ICEWM CXX)
 
-set(CMAKE_CXX_STANDARD 14)
 # Do not fail (because we are still C++11 compliant), try to continue anyway
 # with -std=c++11.
 set(CMAKE_CXX_STANDARD_REQUIRED off)
 # Actually try to use C++20 as well where possible, to uncover potential issues.
-if(CMAKE_VERSION VERSION_GREATER_EQUAL "3.12")
-    set(CMAKE_CXX_STANDARD 20)
-endif()
+set(CMAKE_CXX_STANDARD 20)
 
 INCLUDE(CheckIncludeFiles)
 INCLUDE(CheckLibraryExists)
@@ -133,11 +130,13 @@ if(ENABLE_NLS OR CONFIG_I18N)
     if(CONFIG_LIBICONV)
         LIST(APPEND nls_LIBS iconv)
     endif()
-# XXX: once cmake 3.20 became standard, replace this block with dependency on
-# Intl::Intl interface target.
-    include(FindIntl)
-    if(Intl_FOUND)
-        list(APPEND nls_LIBS ${Intl_LIBRARIES})
+    find_package(Intl)
+    if(CMAKE_VERSION VERSION_GREATER_EQUAL "3.20")
+        list(APPEND nls_LIBS Intl::Intl)
+    else()
+        if(Intl_FOUND)
+            list(APPEND nls_LIBS ${Intl_LIBRARIES})
+        endif()
     endif()
 endif()
 
@@ -252,21 +251,31 @@ endif()
 
 if (CONFIG_NANOSVG)
     set(hub https://raw.githubusercontent.com/memononen/nanosvg/master/src)
-    foreach(nano nanosvg.h nanosvgrast.h)
-        message(STATUS "Checking for src/${nano}")
-        set(src ${CMAKE_SOURCE_DIR}/src/${nano})
-        if (NOT EXISTS ${src})
-            set(url ${hub}/${nano})
-            file(DOWNLOAD ${url} ${src} INACTIVITY_TIMEOUT 3 STATUS down)
-            list(GET down 0 stat)
-            list(GET down 1 mesg)
-            if(NOT ${stat} EQUAL 0 OR NOT EXISTS ${src})
-                message(WARNING "Cannot download ${url} to ${src}: ${mesg}")
-                set(CONFIG_NANOSVG off)
-                break()
-            endif()
+    find_package(NanoSVG)
+    if (NanoSVG_FOUND)
+        if(EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/nanosvg.h OR EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/nanosvgrast.h)
+            message(WARNING "nanosvg headers installed on the system but shadowed by src/nano*.h headers")
+        else()
+            message(STATUS "Using nanosvg headers from the system")
+            LIST(APPEND icewm_img_libs NanoSVG::nanosvg NanoSVG::nanosvgrast)
         endif()
-    endforeach()
+    else()
+        foreach(nano src/nanosvg.h src/nanosvgrast.h)
+            message(STATUS "Checking for src/${nano}")
+            set(src ${CMAKE_SOURCE_DIR}/src/${nano})
+            if (NOT EXISTS ${src})
+                set(url ${hub}/${nano})
+                file(DOWNLOAD ${url} ${src} INACTIVITY_TIMEOUT 3 STATUS down)
+                list(GET down 0 stat)
+                list(GET down 1 mesg)
+                if(NOT ${stat} EQUAL 0 OR NOT EXISTS ${src})
+                    message(WARNING "Cannot download ${url} to ${src}: ${mesg}")
+                    set(CONFIG_NANOSVG off)
+                    break()
+                endif()
+            endif()
+        endforeach()
+    endif()
 endif()
 
 # cursor configuration error check
@@ -440,7 +449,11 @@ list(REMOVE_DUPLICATES icewm_pc_flags)
 do_auto_inc_headers(ICE_COMMON_SRCS)
 add_library(ice STATIC ${ICE_COMMON_SRCS})
 target_compile_options(ice PUBLIC ${icewm_pc_flags})
+# even if not linking against some libs directly, require their include paths to be considered
 target_include_directories(ice PUBLIC ${Intl_INCLUDE_DIRS})
+if(TARGET NanoSVG::nanosvg)
+    target_link_libraries(ice NanoSVG::nanosvg)
+endif()
 
 SET(ITK_SRCS ymenu.cc ylabel.cc yscrollview.cc ymenuitem.cc
              yscrollbar.cc ybutton.cc ylistbox.cc yinputline.cc
